Upd action string concat

--- a/.github/actions/terragrunt-action/action.yaml
+++ b/.github/actions/terragrunt-action/action.yaml
@@ -40,7 +40,7 @@ runs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: ${{ format('inputs.AWS_ROLE_TO_ASSUME_{}', inputs.environment_name.upper }}
+        role-to-assume: ${{ format('inputs.AWS_ROLE_TO_ASSUME_{}', (inputs.environment_name | capitalize) }}
         aws-region: us-west-2
         role-session-name: github-actions
         role-duration-seconds: 900
