fix terraform version command

--- a/.github/actions/terragrunt-action/action.yaml
+++ b/.github/actions/terragrunt-action/action.yaml
@@ -90,7 +90,7 @@ runs:
 
     - name: Terraform Version
       run: |
-        terragrunt --version
+        terraform --version
       shell: bash
 
     - name: Terraform wrapper path
