--- a/.github/actions/terragrunt-action/action.yaml
+++ b/.github/actions/terragrunt-action/action.yaml
@@ -52,36 +52,36 @@ runs:
         role-session-name: github-actions
         role-duration-seconds: 900
 
-    # - name: Create Terraform Plugin Cache Dir
-    #   run: mkdir -p ${{ inputs.tf_plugin_cache_dir }}
-    #   shell: bash
+    - name: Create Terraform Plugin Cache Dir
+      run: mkdir -p ${{ inputs.tf_plugin_cache_dir }}
+      shell: bash
 
-    # - name: Terraform Plugin Cache
-    #   uses: actions/cache@v4
-    #   with:
-    #     path: ${{ inputs.tf_plugin_cache_dir }}
-    #     key: ${{ runner.os }}-terraform-plugin-cache-${{ hashFiles('**/.terraform.lock.hcl') }}
+    - name: Terraform Plugin Cache
+      uses: actions/cache@v4
+      with:
+        path: ${{ inputs.tf_plugin_cache_dir }}
+        key: ${{ runner.os }}-terraform-plugin-cache-${{ hashFiles('**/.terraform.lock.hcl') }}
 
-    # - name: Setup TFLint
-    #   uses: terraform-linters/setup-tflint@v4
-    #   with:
-    #     tflint_version: v0.55.1
+    - name: Setup TFLint
+      uses: terraform-linters/setup-tflint@v4
+      with:
+        tflint_version: v0.55.1
 
-    # - name: Show TFLint Version
-    #   run: tflint --version
-    #   shell: bash
+    - name: Show TFLint Version
+      run: tflint --version
+      shell: bash
 
-    # - name: Init TFLint
-    #   run: |
-    #     tflint --init
-    #   shell: bash
-    #   env:
-    #     GITHUB_TOKEN: ${{ inputs.gh_pat }}
+    - name: Init TFLint
+      run: |
+        tflint --init
+      shell: bash
+      env:
+        GITHUB_TOKEN: ${{ inputs.gh_pat }}
 
-    # - name: Run TFLint
-    #   run: |
-    #     tflint -f json
-    #   shell: bash
+    - name: Run TFLint
+      run: |
+        tflint -f json
+      shell: bash
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3.1.2
@@ -89,30 +89,30 @@ runs:
         # terraform_version: ${{ inputs.tf_version }}
         terraform_wrapper: true
 
-    # - name: Terraform Version
-    #   run: |
-    #     terraform --version
-    #   shell: bash
+    - name: Terraform Version
+      run: |
+        terraform --version
+      shell: bash
 
     - name: Terraform wrapper path
       run: which terraform
       shell: bash
 
-    # - name: Terragrunt Plan
-    #   uses: gruntwork-io/terragrunt-action@v2.1.5
-    #   with:
-    #     tf_version: ${{ inputs.tf_version }}
-    #     tg_version: ${{ inputs.tg_version }}
-    #     tg_dir: ${{ inputs.working_dir }}
-    #     tg_command: 'run-all plan'
+    - name: Terragrunt Plan
+      uses: gruntwork-io/terragrunt-action@v2.1.5
+      with:
+        tf_version: ${{ inputs.tf_version }}
+        tg_version: ${{ inputs.tg_version }}
+        tg_dir: ${{ inputs.working_dir }}
+        tg_command: 'run-all plan'
 
-    # - name: Run Checkov Scan
-    #   uses: bridgecrewio/checkov-action@v12
-    #   with:
-    #     # Adjust paths as needed
-    #     directory: ${{ inputs.working_dir }}
-    #     output_format: cli,sarif
-    #     output_file_path: console,results.sarif
+    - name: Run Checkov Scan
+      uses: bridgecrewio/checkov-action@v12
+      with:
+        # Adjust paths as needed
+        directory: ${{ inputs.working_dir }}
+        output_format: cli,sarif
+        output_file_path: console,results.sarif
 
     # # - name: Upload SARIF file
     # #   uses: github/codeql-action/upload-sarif@v3
@@ -129,10 +129,10 @@ runs:
     #     tg_command: 'run-all apply'
 
 
-    - name: Terragrunt Destroy
-      uses: gruntwork-io/terragrunt-action@v2.1.5
-      with:
-        tf_version: ${{ inputs.tf_version }}
-        tg_version: ${{ inputs.tg_version }}
-        tg_dir: ${{ inputs.working_dir }}
-        tg_command: 'run-all destroy'
+    # - name: Terragrunt Destroy
+    #   uses: gruntwork-io/terragrunt-action@v2.1.5
+    #   with:
+    #     tf_version: ${{ inputs.tf_version }}
+    #     tg_version: ${{ inputs.tg_version }}
+    #     tg_dir: ${{ inputs.working_dir }}
+    #     tg_command: 'run-all destroy'
