--- a/.github/actions/terragrunt-action/action.yaml
+++ b/.github/actions/terragrunt-action/action.yaml
@@ -14,6 +14,9 @@ inputs:
   role_to_assume:
     description: "Role to assume"
     required: true
+  role_session_name:
+    description: "Role session name"
+    required: true
   gh_pat:
     description: "GitHub Personal Access Token"
     required: true
@@ -47,9 +50,10 @@ runs:
       uses: aws-actions/configure-aws-credentials@v4
       with:
         # role-to-assume: arn:aws:iam::${{ inputs.AWS_ACCOUNT_ID }}:role/${{ inputs.environment_name }}-${{ inputs.aws-region }}-iam-role-github-actions-deploy
+        unset-current-credentials: true
         role-to-assume: ${{ inputs.role_to_assume }}
         aws-region: us-west-2
-        role-session-name: github-actions
+        role-session-name: ${{ inputs.role_session_name }}
         role-duration-seconds: 900
 
     - name: Create Terraform Plugin Cache Dir
@@ -61,6 +65,12 @@ runs:
       with:
         path: ${{ inputs.tf_plugin_cache_dir }}
         key: ${{ runner.os }}-terraform-plugin-cache-${{ hashFiles('**/.terraform.lock.hcl') }}
+
+    # - name: Terraform Provider Cache
+    #   uses: actions/cache@v4
+    #   with:
+    #     path: "${{ github.workspace }}/.terraform/providers"
+    #     key: ${{ runner.os }}-terraform-provider-${{ hashFiles('**/.terraform.lock.hcl') }}
 
     - name: Setup TFLint
       uses: terraform-linters/setup-tflint@v4
